# plain_c_nn_benchmark

./: CMakeLists.txt  LICENSE  README.md  check-all.sh
benchexec-extras/: CMakeLists.txt  activation_functions.set  clean.sh  cpachecker.xml  esbmc.xml  hopfield_nets.set  lipschitz_bounded.set  math_functions.set  neural_layers.set  pesco.xml  poly_approx.set  reach_prob_density.set  reinforcement_learning.set  sat_relu.set  spdx_header.sh  uautomizer.xml
benchmarks/: CMakeLists.txt
benchmarks/activation_functions/: CMakeLists.txt
benchmarks/hopfield_nets/: CMakeLists.txt
benchmarks/lipschitz_bounded/: CMakeLists.txt
benchmarks/neural_layers/: CMakeLists.txt
benchmarks/poly_approx/: CMakeLists.txt
benchmarks/reach_prob_density/: CMakeLists.txt
benchmarks/reinforcement_learning/: CMakeLists.txt
benchmarks/sat_relu/: CMakeLists.txt
includes/: CMakeLists.txt  verifier_functions.h  verifier_stubs.c
includes/keras2c/: k2c_activations.c  k2c_convolution_layers.c  k2c_core_layers.c  k2c_embedding_layers.c  k2c_helper_functions.c  k2c_include.h  k2c_merge_layers.c  k2c_normalization_layers.c  k2c_pooling_layers.c  k2c_recurrent_layers.c
includes/math_op_models/: __cosdf.c  __tandf.c  endian.h  libm.h
includes/musl_math/: __cos.c  __cosl.c  __sin.c  __sindf.c  __sinl.c  __tan.c  __tanl.c  atomic.h  finite.c
networks/: CMakeLists.txt
networks/hopfield_nets/: hop_softsign_w16_r1.c  hop_softsign_w16_r1.h  hop_softsign_w16_r2.c  hop_softsign_w16_r2.h  hop_softsign_w16_r3.c  hop_softsign_w16_r3.h  hop_softsign_w16_r4.c  hop_softsign_w16_r4.h  hop_softsign_w32_r1.c  hop_softsign_w32_r1.h  hop_softsign_w32_r2.c  hop_softsign_w32_r2.h  hop_softsign_w32_r3.c  hop_softsign_w32_r3.h  hop_softsign_w32_r4.c  hop_softsign_w32_r4.h  hop_softsign_w4_r1.c  hop_softsign_w4_r1.h  hop_softsign_w4_r2.c  hop_softsign_w4_r2.h  hop_softsign_w4_r3.c  hop_softsign_w4_r3.h  hop_softsign_w4_r4.c  hop_softsign_w4_r4.h  hop_softsign_w64_r1.c  hop_softsign_w64_r1.h  hop_softsign_w64_r2.c  hop_softsign_w64_r2.h  hop_softsign_w64_r3.c  hop_softsign_w64_r3.h  hop_softsign_w64_r4.c  hop_softsign_w64_r4.h  hop_softsign_w8_r1.c  hop_softsign_w8_r1.h  hop_softsign_w8_r2.c  hop_softsign_w8_r2.h  hop_softsign_w8_r3.c  hop_softsign_w8_r3.h  hop_softsign_w8_r4.c  hop_softsign_w8_r4.h  (+40 more)
networks/lipschitz_bounded/: sll_arch_2x16x16x1.c  sll_arch_2x20x20x1.c  sll_arch_2x4x4x1.c  sll_arch_3x12x12x1.c  sll_arch_3x16x16x1.c  sll_arch_3x24x24x1.c  sll_arch_3x4x4x1.c  sll_arch_3x8x8x1.c  sll_arch_4x4x4x1.c
networks/poly_approx/: poly_1024.c  poly_1024.h  poly_128.c  poly_128.h  poly_128_128.c  poly_128_128.h  poly_16_16.c  poly_16_16.h  poly_16_16_16.c  poly_16_16_16.h  poly_16_16_16_16.c  poly_16_16_16_16.h  poly_256.c  poly_256.h  poly_32_32.c  poly_32_32.h  poly_32_32_32.c  poly_32_32_32.h  poly_32_32_32_32.c  poly_32_32_32_32.h  poly_4_4_4_4.c  poly_4_4_4_4.h  poly_512.c  poly_512.h  poly_64_64.c  poly_64_64.h  poly_64_64_64.c  poly_64_64_64.h  poly_8_8_8.c  poly_8_8_8.h  poly_8_8_8_8.c  poly_8_8_8_8.h
networks/reach_prob_density/: gcas.c  robot.c  vdp.c
networks/reinforcement_learning/: cartpole.c  dubinsrejoin.c  lunarlander.c
properties/: CMakeLists.txt
properties/activation_functions/: CMakeLists.txt  elu_1_safe.c  elu_4_safe.c  gelu_2_safe.c  gelu_3_unsafe.c  logistic_3_safe.c  logistic_6_safe.c  logistic_7_unsafe.c  relu_1_safe.c  relu_2_safe.c  softmax_0_safe.c  softmax_10_safe.c  softmax_11_safe.c  softmax_12_unsafe.c  softmax_13_unsafe.c  softmax_1_unsafe.c  softmax_2_safe.c  softmax_3_unsafe.c  softmax_4_safe.c  softmax_5_unsafe.c  softmax_6_safe.c  softmax_7_unsafe.c  softmax_8_safe.c  softmax_9_unsafe.c  softplus_0_safe.c  softplus_2_safe.c  softplus_3_safe.c  softplus_4_safe.c  softplus_5_safe.c  softsign_1_safe.c  softsign_2_safe.c  softsign_3_safe.c  softsign_4_safe.c  softsign_5_safe.c  tanh_2_safe.c  tanh_3_safe.c  tanh_5_unsafe.c  tanh_6_safe.c  tanh_7_safe.c
properties/hopfield_nets/: CMakeLists.txt  softsign_w16_r1_case_0_unsafe.c  softsign_w16_r2_case_0_safe.c  softsign_w32_r2_case_0_safe.c  softsign_w32_r3_case_0_safe.c  softsign_w32_r4_case_1_unsafe.c  softsign_w4_r1_case_0_unsafe.c  softsign_w4_r1_case_1_safe.c  softsign_w4_r2_case_0_safe.c  softsign_w4_r2_case_1_unsafe.c  softsign_w4_r3_case_0_safe.c  softsign_w4_r4_case_0_safe.c  softsign_w64_r2_case_0_safe.c  softsign_w64_r3_case_1_unsafe.c  softsign_w64_r4_case_0_safe.c  softsign_w8_r1_case_1_safe.c  softsign_w8_r2_case_0_safe.c  softsign_w8_r2_case_1_unsafe.c  softsign_w8_r3_case_1_unsafe.c  softsign_w8_r4_case_0_safe.c  tanh_w16_r1_case_0_unsafe.c  tanh_w16_r1_case_1_safe.c  tanh_w16_r2_case_1_unsafe.c  tanh_w16_r3_case_0_safe.c  tanh_w16_r4_case_1_safe.c  tanh_w32_r2_case_0_safe.c  tanh_w32_r3_case_0_safe.c  tanh_w32_r3_case_1_safe.c  tanh_w32_r4_case_0_safe.c  tanh_w4_r1_case_0_unsafe.c  tanh_w4_r3_case_0_safe.c  tanh_w4_r4_case_0_safe.c  tanh_w64_r1_case_0_unsafe.c  tanh_w64_r1_case_1_safe.c  tanh_w64_r2_case_1_unsafe.c  tanh_w64_r3_case_0_safe.c  tanh_w64_r4_case_0_safe.c  tanh_w64_r4_case_1_safe.c  tanh_w8_r1_case_0_unsafe.c  tanh_w8_r1_case_1_safe.c  (+2 more)
properties/math_functions/: CMakeLists.txt  cos_0_safe.c  cos_4_safe.c  cos_6_safe.c  erf_0_safe.c  erf_1_safe.c  erf_3_unsafe.c  erf_5_safe.c  exp_1_safe.c  exp_2_safe.c  exp_4_unsafe.c  exp_5_unsafe.c  log_0_safe.c  log_1_safe.c  log_2_safe.c  log_3_unsafe.c  log_4_safe.c  log_5_unsafe.c  log_6_safe.c  sin_0_safe.c  sin_4_safe.c  sin_6_safe.c  sqrt_0_safe.c  sqrt_1_safe.c  sqrt_3_safe.c  sqrt_5_safe.c  sqrt_6_unsafe.c
properties/poly_approx/: CMakeLists.txt  poly_1024_thresh_0_safe.c  poly_1024_thresh_2_safe.c  poly_1024_thresh_3_unsafe.c  poly_1024_thresh_4_unsafe.c  poly_1024_thresh_5_unsafe.c  poly_128_128_thresh_1_safe.c  poly_128_thresh_1_safe.c  poly_128_thresh_3_unsafe.c  poly_128_thresh_4_unsafe.c  poly_16_16_16_16_thresh_1_safe.c  poly_16_16_16_16_thresh_2_safe.c  poly_16_16_16_16_thresh_3_unsafe.c  poly_16_16_16_16_thresh_5_unsafe.c  poly_16_16_16_thresh_1_safe.c  poly_16_16_16_thresh_2_safe.c  poly_16_16_thresh_2_safe.c  poly_16_16_thresh_3_unsafe.c  (+42 more)
(+2655 files in other folders)
